--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>maven-plugin-parent</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
@@ -8,6 +9,6 @@
   <artifactId>maven-clean-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
-  <version>2.0-beta-1</version>
+  <version>2.0-beta-1-SNAPSHOT</version>
   <inceptionYear>2001</inceptionYear>
 </project>
