--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <parent>
     <artifactId>maven-plugin-parent</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
-    <version>2.0-beta-1</version>
+    <version>2.0-beta-3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>maven-clean-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
-  <version>2.0-beta-2-SNAPSHOT</version>
+  <version>2.0-rc1-SNAPSHOT</version>
   <inceptionYear>2001</inceptionYear>
 </project>
