--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,6 @@
   <artifactId>maven-clean-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
-  <version>2.0-rc1</version>
+  <version>2.0-rc2-SNAPSHOT</version>
   <inceptionYear>2001</inceptionYear>
 </project>
