Changed to reflect changes in the file-management library, which allow the mojo to pass in a monitor adapter for logging, and a verbose flag.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@377894 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,10 @@
       <artifactId>file-management</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-shared-monitor</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
