--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>maven-plugin-parent</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
@@ -8,9 +8,8 @@
   <artifactId>maven-clean-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
-  <version>2.1-SNAPSHOT</version>
+  <version>2.1</version>
   <inceptionYear>2001</inceptionYear>
-
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
