--- a/pom.xml
+++ b/pom.xml
@@ -18,25 +18,32 @@ specific language governing permissions and limitations
 under the License.
 -->
 
-<project xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xsi:schemaLocation='http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd' xmlns='http://maven.apache.org/POM/4.0.0'>
+<project xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
+  xsi:schemaLocation='http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd'
+  xmlns='http://maven.apache.org/POM/4.0.0'>
+  <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <artifactId>maven-plugins</artifactId>
     <groupId>org.apache.maven.plugins</groupId>
     <version>8</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+
   <artifactId>maven-clean-plugin</artifactId>
+  <version>2.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
-  <version>2.2-SNAPSHOT</version>
   <inceptionYear>2001</inceptionYear>
+
   <prerequisites>
     <maven>2.0</maven>
   </prerequisites>
+
   <issueManagement>
     <system>JIRA</system>
     <url>http://jira.codehaus.org/browse/MCLEAN</url>
   </issueManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -49,21 +56,23 @@ under the License.
       <version>1.2-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.1</version>
+    </dependency>
+
+    <!-- Test -->
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>1.1</version>
-    </dependency>
   </dependencies>
+
   <contributors>
     <contributor>
       <name>Jesse McConnell</name>
     </contributor>
   </contributors>
 </project>
-
