--- a/pom.xml
+++ b/pom.xml
@@ -75,4 +75,13 @@ under the License.
       <name>Jesse McConnell</name>
     </contributor>
   </contributors>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.3</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
