o added project's description
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@594873 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@ under the License.
   <version>2.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
+  <description>
+    The Maven Clean Plugin is a plugin that removes files generated at build-time in a project's directory.
+  </description>
   <inceptionYear>2001</inceptionYear>
 
   <prerequisites>
