--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@ under the License.
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-plugin-testing-harness</artifactId>
+      <version>1.1</version>
+      <scope>test</scope>
+    </dependency>	  
   </dependencies>
 
   <contributors>
