--- a/pom.xml
+++ b/pom.xml
@@ -90,4 +90,10 @@ under the License.
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-clean-plugin</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-clean-plugin</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/maven/plugins/trunk/maven-clean-plugin</url>
+  </scm>
 </project>
