--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ under the License.
   </parent>
 
   <artifactId>maven-clean-plugin</artifactId>
-  <version>2.2-SNAPSHOT</version>
+  <version>2.2</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Clean Plugin</name>
   <description>
@@ -92,8 +92,8 @@ under the License.
   </build>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-clean-plugin</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-clean-plugin</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/maven/plugins/trunk/maven-clean-plugin</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/plugins/tags/maven-clean-plugin-2.2</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/tags/maven-clean-plugin-2.2</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/maven/plugins/tags/maven-clean-plugin-2.2</url>
   </scm>
 </project>
