--- a/pom.xml
+++ b/pom.xml
@@ -87,4 +87,34 @@ under the License.
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-clean-plugin</developerConnection>
     <url>http://svn.apache.org/viewcvs.cgi/maven/plugins/trunk/maven-clean-plugin</url>
   </scm>
+
+  <profiles>
+    <profile>
+      <id>run-its</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <phase>integration-test</phase>
+                <configuration>
+                  <tasks>
+                    <echo/><echo/><echo/><echo/><echo/>
+                    <echo level="warning">NO INTEGRATION TESTS DEFINED</echo>
+                    <echo/><echo/><echo/><echo/><echo/>
+                  </tasks>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
