o Added integration test to check handling of relative for file sets
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@691767 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/file-sets-relative-paths/child-b/pom.xml
+++ b/src/it/file-sets-relative-paths/child-b/pom.xml
@@ -24,15 +24,23 @@ under the License.
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>test</groupId>
+    <artifactId>parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <groupId>test</groupId>
-  <artifactId>default</artifactId>
+  <artifactId>child-b</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>Test for clean</name>
-  <description>Check for proper cleaning of default output files.</description>
+  <name>Child B</name>
+  <description>Check for proper cleaning of file sets with relative paths during reactor build.</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- NOTE: It is part of the test design that this path is relative (to the project base directory) -->
+    <deploy.dir>deploy</deploy.dir>
   </properties>
 
   <build>
@@ -40,7 +48,13 @@ under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>@pom.version@</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${deploy.dir}</directory>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
     </plugins>
   </build>
