[MCLEAN-55] Updated to maven-shared-utils, which includes NIO delete
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1631465 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@ under the License.
       <version>${mavenVersion}</version>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>3.0.15</version>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-shared-utils</artifactId>
+      <version>0.7-SNAPSHOT</version>
     </dependency>
 
     <!-- dependencies to annotations -->
