--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@ under the License.
   </scm>
   <issueManagement>
     <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/MCLEAN</url>
+    <url>https://issues.apache.org/jira/browse/MCLEAN</url>
   </issueManagement>
   <distributionManagement>
     <site>
