--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@ under the License.
 
   <properties>
     <mavenVersion>3.0</mavenVersion>
+    <surefire.version>2.21.0</surefire.version>
   </properties>
 
   <dependencies>
@@ -113,22 +114,6 @@ under the License.
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.21.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.21.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 
   <profiles>
     <profile>
