--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@ under the License.
       <artifactId>maven-plugin-testing-harness</artifactId>
       <version>3.1.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.codehaus.plexus</groupId>
+          <artifactId>plexus-container-default</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
