--- a/pom.xml
+++ b/pom.xml
@@ -127,10 +127,22 @@ under the License.
   <build>
     <pluginManagement>
       <plugins>
+        <!-- remove with next parent upgrade -->
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>3.1.1</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>3.0.0-M3</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.2.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.9.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
