--- a/pom.xml
+++ b/pom.xml
@@ -136,9 +136,13 @@ under the License.
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>3.0.0-M3</version>
         </plugin>
-        <plugin>
+       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.3.1</version>
+          <configuration> <!--  remove after MPOM-269 -->
+            <tagletArtifacts combine.self="override"/>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
