--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,14 @@ under the License.
         </plugin>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.0.0-M3</version>
+          <version>3.0.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>extra-enforcer-rules</artifactId>
+              <version>1.4</version>
+            </dependency>
+          </dependencies>
         </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -150,6 +157,19 @@ under the License.
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin><!-- remove with next parent upgrade -->
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>extra-enforcer-rules</artifactId>
+            <version>1.4</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
