--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@ under the License.
   </parent>
 
   <artifactId>maven-clean-plugin</artifactId>
-  <version>3.2.0</version>
+  <version>3.2.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Clean Plugin</name>
@@ -47,7 +47,7 @@ under the License.
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</developerConnection>
     <url>https://github.com/apache/maven-clean-plugin/tree/${project.scm.tag}</url>
-    <tag>maven-clean-plugin-3.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>JIRA</system>
@@ -69,7 +69,7 @@ under the License.
     <javaVersion>8</javaVersion>
     <surefire.version>2.22.2</surefire.version>
     <mavenPluginToolsVersion>3.6.4</mavenPluginToolsVersion>
-    <project.build.outputTimestamp>2022-04-01T21:13:15Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2022-04-01T21:13:26Z</project.build.outputTimestamp>
   </properties>
 
   <dependencies>
