[MCLEAN-103] - Upgrade maven-plugin parent to 38

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
-
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
@@ -18,15 +17,14 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-plugins</artifactId>
-    <version>35</version>
-    <relativePath />
+    <version>38</version>
+    <relativePath/>
   </parent>
 
   <artifactId>maven-clean-plugin</artifactId>
@@ -34,9 +32,7 @@ under the License.
   <packaging>maven-plugin</packaging>
 
   <name>Apache Maven Clean Plugin</name>
-  <description>
-    The Maven Clean Plugin is a plugin that removes files generated at build-time in a project's directory.
-  </description>
+  <description>The Maven Clean Plugin is a plugin that removes files generated at build-time in a project's directory.</description>
   <inceptionYear>2001</inceptionYear>
 
   <prerequisites>
@@ -46,8 +42,8 @@ under the License.
   <scm>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/maven-clean-plugin.git</developerConnection>
-    <url>https://github.com/apache/maven-clean-plugin/tree/${project.scm.tag}</url>
     <tag>HEAD</tag>
+    <url>https://github.com/apache/maven-clean-plugin/tree/${project.scm.tag}</url>
   </scm>
   <issueManagement>
     <system>JIRA</system>
@@ -67,7 +63,6 @@ under the License.
   <properties>
     <mavenVersion>3.2.5</mavenVersion>
     <javaVersion>8</javaVersion>
-    <surefire.version>2.22.2</surefire.version>
     <mavenPluginToolsVersion>3.6.4</mavenPluginToolsVersion>
     <project.build.outputTimestamp>2022-04-01T21:20:42Z</project.build.outputTimestamp>
   </properties>
