--- a/.asf.yaml
+++ b/.asf.yaml
@@ -24,3 +24,14 @@ github:
     - maven-plugins
     - maven-clean-plugin
     - maven
+  enabled_merge_buttons:
+    squash: true
+    merge: false
+    rebase: true
+  autolink_jira:
+    - MCLEAN
+notifications:
+  commits: commits@maven.apache.org
+  issues: issues@maven.apache.org
+  pullrequests: issues@maven.apache.org
+  jira_options: link label comment
