[MCLEAN-107] Upgrade to plexus-utils 4.0.0 and plexus-xml 4.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,14 @@ under the License.
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.maven.shared</groupId>
-      <artifactId>maven-shared-utils</artifactId>
-      <version>3.3.4</version>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-xml</artifactId>
+      <version>4.0.0</version>
     </dependency>
 
     <!-- dependencies to annotations -->
