[MCLEAN-101] Fix wrong Jenkins URL

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@ under the License.
   </issueManagement>
   <ciManagement>
     <system>Jenkins</system>
-    <url>https://ci-builds.apache.org/job/Maven/job/maven-box/job/maven-clean-plugin/</url>
+    <url>https://ci-maven.apache.org/job/Maven/job/maven-box/job/maven-clean-plugin/</url>
   </ciManagement>
   <distributionManagement>
     <site>
