--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@ under the License.
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-xml</artifactId>
       <version>4.0.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- dependencies to annotations -->
