--- a/src/it/fast-delete/pom.xml
+++ b/src/it/fast-delete/pom.xml
@@ -40,7 +40,7 @@ under the License.
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>@pom.version@</version>
+				<version>@project.version@</version>
 				<configuration>
 					<fast>true</fast>
 					<fastDir>${project.basedir}${file.separator}.fastdir</fastDir>
