--- a/src/test/resources/unit/fileset-clean-test/pom.xml
+++ b/src/test/resources/unit/fileset-clean-test/pom.xml
@@ -23,9 +23,28 @@
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
-          <directory>${basedir}/target/test-classes/unit/basic-clean-test/buildDirectory</directory>
-          <outputDirectory>${basedir}/target/test-classes/unit/basic-clean-test/buildOutputDirectory</outputDirectory>
-          <testOutputDirectory>${basedir}/target/test-classes/unit/basic-clean-test/buildTestDirectory</testOutputDirectory>
+          <excludeDefaultDirectories>true</excludeDefaultDirectories>
+          <filesets>
+            <fileset>
+              <directory>${project.basedir}/target</directory>
+              <includes>
+                <include>**/file.txt</include>
+                <include>**/test-classes/**</include>
+              </includes>
+              <excludes>
+                <exclude>**/subdir/**</exclude>
+              </excludes>
+            </fileset>
+            <fileset>
+              <directory>${project.basedir}/buildOutputDirectory</directory>
+              <includes>
+                <include>**</include>
+              </includes>
+              <excludes>
+                <exclude></exclude>
+              </excludes>
+            </fileset>
+          </filesets>
           <verbose>true</verbose>
           <failOnError>true</failOnError>
         </configuration>
