--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,24 @@ under the License.
   <properties>
     <mavenVersion>4.0.0-beta-3</mavenVersion>
     <javaVersion>17</javaVersion>
+    <guavaVersion>33.2.1-jre</guavaVersion>
+    <guiceVersion>6.0.0</guiceVersion>
+    <slf4jVersion>2.0.13</slf4jVersion>
     <version.maven-invoker-plugin>3.7.0</version.maven-invoker-plugin>
     <version.maven-plugin-testing>4.0.0-alpha-3-SNAPSHOT</version.maven-plugin-testing>
     <version.maven-plugin-tools>4.0.0-SNAPSHOT</version.maven-plugin-tools>
     <project.build.outputTimestamp>2024-06-16T10:25:11Z</project.build.outputTimestamp>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guavaVersion}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -115,13 +128,13 @@ under the License.
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
-      <version>6.0.0</version>
+      <version>${guiceVersion}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.13</version>
+      <version>${slf4jVersion}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
