--- a/src/it/fast-delete/pom.xml
+++ b/src/it/fast-delete/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
@@ -18,35 +17,32 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  <groupId>test</groupId>
+  <artifactId>fast-delete</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-	<groupId>test</groupId>
-	<artifactId>fast-delete</artifactId>
-	<version>1.0-SNAPSHOT</version>
+  <name>Fast delete</name>
+  <description>Check that fast delete is invoked.</description>
 
-	<name>Fast delete</name>
-	<description>Check that fast delete is invoked.</description>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>@project.version@</version>
-				<configuration>
-					<fast>true</fast>
-					<fastDir>${project.basedir}${file.separator}.fastdir</fastDir>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>@project.version@</version>
+        <configuration>
+          <fast>true</fast>
+          <fastDir>${project.basedir}${file.separator}.fastdir</fastDir>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
