--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@ under the License.
   </distributionManagement>
 
   <properties>
-    <mavenVersion>4.0.0-beta-5-SNAPSHOT</mavenVersion>
+    <mavenVersion>4.0.0-beta-5</mavenVersion>
     <javaVersion>17</javaVersion>
     <guavaVersion>33.2.1-jre</guavaVersion>
     <guiceVersion>6.0.0</guiceVersion>
