Update to released m-plugin-testing

--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@ under the License.
     <guiceVersion>6.0.0</guiceVersion>
     <slf4jVersion>2.0.13</slf4jVersion>
     <version.maven-invoker-plugin>3.7.0</version.maven-invoker-plugin>
-    <version.maven-plugin-testing>4.0.0-beta-2-SNAPSHOT</version.maven-plugin-testing>
+    <version.maven-plugin-testing>4.0.0-beta-2</version.maven-plugin-testing>
     <version.maven-plugin-tools>4.0.0-beta-1</version.maven-plugin-tools>
     <version.maven-site-plugin>4.0.0-M16</version.maven-site-plugin>
     <version.maven-fluido-skin>2.0.0-M11</version.maven-fluido-skin>
