Upgrade to beta-5 (#58)

--- a/pom.xml
+++ b/pom.xml
@@ -61,14 +61,16 @@ under the License.
   </distributionManagement>
 
   <properties>
-    <mavenVersion>4.0.0-beta-3</mavenVersion>
+    <mavenVersion>4.0.0-beta-5</mavenVersion>
     <javaVersion>17</javaVersion>
     <guavaVersion>33.2.1-jre</guavaVersion>
     <guiceVersion>6.0.0</guiceVersion>
     <slf4jVersion>2.0.13</slf4jVersion>
     <version.maven-invoker-plugin>3.7.0</version.maven-invoker-plugin>
-    <version.maven-plugin-testing>4.0.0-beta-1</version.maven-plugin-testing>
+    <version.maven-plugin-testing>4.0.0-beta-2</version.maven-plugin-testing>
     <version.maven-plugin-tools>4.0.0-beta-1</version.maven-plugin-tools>
+    <version.maven-site-plugin>4.0.0-M16</version.maven-site-plugin>
+    <version.maven-fluido-skin>2.0.0-M11</version.maven-fluido-skin>
     <project.build.outputTimestamp>2024-06-26T08:19:25Z</project.build.outputTimestamp>
   </properties>
 
@@ -117,6 +119,12 @@ under the License.
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-api-impl</artifactId>
+      <version>${mavenVersion}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
