Add prerelease identifier to release-drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -16,7 +16,8 @@
 # under the License.
 
 _extends: maven-gh-actions-shared
-tag-template: maven-clean-plugin-$NEXT_MINOR_VERSION
+tag-template: maven-clean-plugin-$NEXT_PATCH_VERSION
 version-template: 4.$MINOR.$PATCH
 commitish: master
 filter-by-commitish: true
+prerelease-identifier: 'beta'
