--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@ under the License.
   <inceptionYear>2001</inceptionYear>
 
   <prerequisites>
-    <maven>${mavenVersion}</maven>
+    <maven>3.6.3</maven>
   </prerequisites>
 
   <scm>
