Add configuration for pre-release in master

--- a/.github/release-drafter-3.x.yml
+++ b/.github/release-drafter-3.x.yml
@@ -15,9 +15,6 @@
 # specific language governing permissions and limitations
 # under the License.
 
-_extends: maven-gh-actions-shared
+_extends: maven-gh-actions-shared:.github/release-drafter.yml
 
 tag-template: maven-clean-plugin-$RESOLVED_VERSION
-
-include-pre-releases: true
-prerelease: true
