Publish documentation to LATEST-4.x

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@ under the License.
   <distributionManagement>
     <site>
       <id>apache.website</id>
-      <url>scm:svn:https://svn.apache.org/repos/asf/maven/website/components/${maven.site.path}</url>
+      <url>scm:svn:https://svn.apache.org/repos/asf/maven/website/components/${maven4x.site.path}</url>
     </site>
   </distributionManagement>
 
@@ -72,6 +72,9 @@ under the License.
     <version.maven-site-plugin>3.21.0</version.maven-site-plugin>
     <version.maven-fluido-skin>2.0.1</version.maven-fluido-skin>
     <project.build.outputTimestamp>2024-06-26T08:19:25Z</project.build.outputTimestamp>
+
+    <!-- TODO remove with next parent -->
+    <maven4x.site.path>plugins-archives/${project.artifactId}-LATEST-4.x</maven4x.site.path>
   </properties>
 
   <dependencyManagement>
